# ultramem

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  KICKOFF.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/ultramem-core/: Cargo.toml
crates/ultramem-core/examples/: bench_ingest.rs  longmemeval.rs  probe.rs
crates/ultramem-core/migrations/: 0001_init.sql  0002_acl.sql  0003_superseded_at.sql  0004_entities.sql
crates/ultramem-core/src/: entity.rs  lib.rs  llm.rs  scope.rs
crates/ultramem-core/src/db/: mock.rs  mod.rs  pg.rs
crates/ultramem-core/src/engine/: chunker.rs  context.rs  distill.rs  extract.rs  graph.rs  jina.rs  memory.rs  mistral.rs  mod.rs  profile.rs  promptguard.rs  qdrant.rs  redact.rs  rewrite.rs  sparse.rs  urlinfo.rs
crates/ultramem-core/src/providers/: blob.rs  jina.rs  llm_provider.rs  mistral.rs  mock.rs  mod.rs  openai.rs  qdrant_store.rs
crates/ultramem-server/: Cargo.toml
crates/ultramem-server/src/: main.rs  tenant.rs
docs/: 01-design.md  02-gap-analysis.md  03-implementation.md  ACCEPTANCE.md  API.md  EXTRACTION.md  FABLE5_CLOUD_LOOP_FEEDBACK_AND_EXECUTION.md  FABLE5_DEEP_MEMORY_AUDIT.md  FABLE5_DEEP_MEMORY_AUDIT_PROMPT.md  FABLE5_EXECUTION_PLAN.md  FABLE5_SOTA_10_EXECUTION_PROMPT.md  HOW-IT-WORKS.md  MCP.md  PHASE_A_SCOPING.md  ROADMAP.md  SPRINT_LOG.md  benchmarks.md  longmemeval-STATUS.md  longmemeval-report.md  longmemeval-roadmap.md  longmemeval-study.md  make_brand_charts.py  make_comparison_chart.py  memory-vs-rag.md
eval/: corpus_demo.json  corpus_hard.json  hard_gold.json
