[package]
name = "ultramem-core"
version = "0.1.0"
description = "Open-source memory engine for AI agents — chunks + distilled facts, reconciled over time."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
url.workspace = true
futures-util.workspace = true
async-trait.workspace = true

[dev-dependencies]
dotenvy.workspace = true
walkdir.workspace = true
dirs.workspace = true

[[example]]
name = "probe"
path = "examples/probe.rs"

[[example]]
name = "bench_ingest"
path = "examples/bench_ingest.rs"

[[example]]
name = "longmemeval"
path = "examples/longmemeval.rs"
