[package]
name = "ultramem-server"
version = "0.1.0"
description = "HTTP API for the UltraMem memory engine."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ultramem-core = { path = "../ultramem-core" }
axum = { version = "0.7", features = ["multipart"] }
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dotenvy.workspace = true
